Updated docu and changed some tiny details
